# project2

./: custom_bytecode_word2vec.kv  download_word2vec.py  pca.h5  prj2.ipynb  readme.md
apk-scanner-webapp/: readme.md
apk-scanner-webapp/backend/: app.py  config.py  logging_config.py  pyproject.toml
apk-scanner-webapp/backend/analyzers/: ai_analyzer.py  apk_analyzer.py  malware_detector.py  manifest_analyzer.py  permission_analyzer.py  security_analyzer.py
apk-scanner-webapp/backend/utils/: file_utils.py  hash_calculator.py  response_formatter.py
apk-scanner-webapp/frontend/: index.html
model-training/: .gitignore  app.py  extract_data.py  extract_data_2.py  prj2.ipynb  prj2_pca.ipynb  pyproject.toml  word2vec_model.h5
reference/: extract_data.py  pca_train.ipynb  word2vec_respawn.ipynb
